fixed scrollbars not appearing correctly in a few places

--- a/vyne-query-service/src/main/web/src/app/cask-viewer/cask-viewer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/cask-viewer/cask-viewer.component.scss
@@ -41,6 +41,7 @@
   display: flex;
   flex-grow: 1;
   height: 10px;
+  overflow: auto;
 
   .results-section {
     flex-grow: 1;
